--- a/docs/static/css/style.css
+++ b/docs/static/css/style.css
@@ -1,3 +1,8 @@
+body {
+    background-image: linear-gradient(aqua, aquamarine);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
 .jumbotron {
     background-image: url("../images/jumbo-background.jpg");
     background-size: cover;
@@ -9,4 +14,21 @@
     background-color: rgba(227, 234, 240, 0.63);
     border-radius: 15px;
     box-shadow: 1px 1px rgba(48, 51, 53, 0.116);
+}
+
+.active {
+    font-weight: bolder;
+    color: black;
+}
+
+.inactive {
+    font-weight: normal;
+    color: lightgrey;
+}
+
+.tooltip {
+    padding: 5px;
+    background-color: azure;
+    border: 1px solid black;
+    border-radius: 15px;
 }
